UI changes. make container responsive

--- a/src/Resources/app/administration/src/view/sw-order-detail-inpost-detail-card/sw-order-detail-inpost-detail-card.html.twig
+++ b/src/Resources/app/administration/src/view/sw-order-detail-inpost-detail-card/sw-order-detail-inpost-detail-card.html.twig
@@ -16,11 +16,11 @@
             </div>
 
             <div class="actions">
-                <button @click="this.getLabel" class="sw-button get-label" ref="getLabel">
+                <button @click="this.getLabel" class="sw-button sw-button--primary" ref="getLabel">
                     {{ $tc('administration.order.inpost.getLabel') }}
                 </button>
 
-                <button @click="this.createPackage" class="sw-button sw-button--primary">
+                <button @click="this.createPackage" class="sw-button sw-button--contrast">
                     {{ $tc('administration.order.inpost.createPackage') }}
                 </button>
             </div>
