Remove unused class

--- a/src/Resources/views/storefront/component/shipping/shipping-method.html.twig
+++ b/src/Resources/views/storefront/component/shipping/shipping-method.html.twig
@@ -18,7 +18,7 @@
 
             <button class="btn btn-primary" data-inpost-plugin-changePoint>Change point</button>
         </div>
-        <div id="easypack-map" class="inpostMap" data-inpost-plugin-map></div>
+        <div id="easypack-map" data-inpost-plugin-map></div>
 
         <input type="hidden" id="inpost-parcel-locker" name="customParcelLockerField" form="confirmOrderForm">
     {% endif %}
