Add validator in storefront to check that a point is selected

--- a/src/Resources/app/storefront/src/scss/base.scss
+++ b/src/Resources/app/storefront/src/scss/base.scss
@@ -32,3 +32,11 @@
 .inpostPoint.hide, .easypack-widget.hide{
     display: none;
 }
+
+.error-message {
+    color: red;
+
+    &.hide {
+        display: none;
+    }
+}
