--- a/src/Resources/views/storefront/base.html.twig
+++ b/src/Resources/views/storefront/base.html.twig
@@ -4,7 +4,7 @@
     {{ parent() }}
 
     {% if page is defined and page.shippingMethods is defined and
-        context.shippingMethod.name === constant('BitBag\\ShopwareInPostPlugin\\Factory\\ShippingMethodPayloadFactoryInterface::SHIPPING_KEY')
+        context.shippingMethod.customFields.technical_name == constant('BitBag\\ShopwareInPostPlugin\\Factory\\ShippingMethodPayloadFactoryInterface::SHIPPING_KEY')
     %}
         <link rel="stylesheet" href="https://geowidget.easypack24.net/css/easypack.css"/>
         <script async src="https://geowidget.easypack24.net/js/sdk-for-javascript.js"></script>
