--- a/src/Resources/views/storefront/component/shipping/shipping-method.html.twig
+++ b/src/Resources/views/storefront/component/shipping/shipping-method.html.twig
@@ -4,7 +4,7 @@
     {{ parent() }}
 
     {% if (shipping.id is same as(context.shippingMethod.id)) and
-        shipping.name === constant('BitBag\\ShopwareInPostPlugin\\Factory\\ShippingMethodPayloadFactoryInterface::SHIPPING_KEY')
+        shipping.customFields.technical_name == constant('BitBag\\ShopwareInPostPlugin\\Factory\\ShippingMethodPayloadFactoryInterface::SHIPPING_KEY')
     %}
         <div class="inpostPoint hide" data-inpost-plugin-selectedPoint>
             <div class="inpostDetails">
@@ -19,6 +19,8 @@
             <button class="btn btn-primary" data-inpost-plugin-changePoint>Change point</button>
         </div>
         <div id="easypack-map" data-inpost-plugin-map></div>
+
+        <p class="error-message hide" id="pointNameNotSelectedMessage">{{ 'pointName.notFound'|trans }}</p>
 
         <input type="hidden" id="inpost-parcel-locker" name="customParcelLockerField" form="confirmOrderForm">
     {% endif %}
