--- a/src/Resources/views/storefront/component/shipping/shipping-method.html.twig
+++ b/src/Resources/views/storefront/component/shipping/shipping-method.html.twig
@@ -20,7 +20,7 @@
         </div>
         <div id="easypack-map" data-inpost-plugin-map></div>
 
-        <p class="error-message hide" id="pointNameNotSelectedMessage">{{ 'pointName.notFound'|trans }}</p>
+        <p class="error-message hide" class="point-name-not-selected-message">{{ 'pointName.notFound'|trans }}</p>
 
         <input type="hidden" id="inpost-parcel-locker" name="customParcelLockerField" form="confirmOrderForm">
     {% endif %}
