--- a/src/Resources/app/administration/src/view/sw-order-detail-inpost-detail-card/sw-order-detail-inpost-detail-card.html.twig
+++ b/src/Resources/app/administration/src/view/sw-order-detail-inpost-detail-card/sw-order-detail-inpost-detail-card.html.twig
@@ -17,11 +17,11 @@
 
             <div class="actions">
                 <button @click="this.getLabel" class="sw-button sw-button--primary" ref="getLabel">
-                    {{ $tc('administration.order.inpost.getLabel') }}
+                    {{ $tc('cardDetails.getLabel') }}
                 </button>
 
                 <button @click="this.createPackage" class="sw-button sw-button--contrast" ref="createPackage">
-                    {{ $tc('administration.order.inpost.createPackage') }}
+                    {{ $tc('cardDetails.createPackage') }}
                 </button>
             </div>
         </div>
