--- a/src/Resources/views/storefront/base.html.twig
+++ b/src/Resources/views/storefront/base.html.twig
@@ -3,9 +3,17 @@
 {% block base_head %}
     {{ parent() }}
 
-    {% if page is defined and page.shippingMethods is defined and
-        context.shippingMethod.customFields.technical_name == constant('BitBag\\ShopwareInPostPlugin\\Factory\\ShippingMethodPayloadFactoryInterface::SHIPPING_KEY')
-    %}
+    {% set technicalName = null %}
+
+    {% if context.shippingMethod.customFields.technical_name is not empty %}
+        {% set technicalName = context.shippingMethod.customFields.technical_name %}
+    {% endif %}
+
+    {% if context.shippingMethod.translated.customFields.technical_name is not empty %}
+        {% set technicalName = context.shippingMethod.translated.customFields.technical_name %}
+    {% endif %}
+
+    {% if page is defined and page.shippingMethods is defined and technicalName == constant('BitBag\\ShopwareInPostPlugin\\Factory\\ShippingMethodPayloadFactoryInterface::SHIPPING_KEY') %}
         <link rel="stylesheet" href="https://geowidget.easypack24.net/css/easypack.css"/>
         <script async src="https://geowidget.easypack24.net/js/sdk-for-javascript.js"></script>
     {% endif %}
