Move InPost details into another components

--- a/src/Resources/app/administration/src/extension/sw-order/sw-order-detail-base/sw-order-detail-base.html.twig
+++ b/src/Resources/app/administration/src/extension/sw-order/sw-order-detail-base/sw-order-detail-base.html.twig
@@ -1,5 +1,5 @@
 {% block sw_order_detail_delivery_metadata %}
     {% parent %}
 
-    <sw-order-detail-inpost-detail-card />
+    <sw-order-detail-inpost-detail-card :order="order" />
 {% endblock %}
