Add translated alt for pointName image, fix code from code review

--- a/src/Resources/app/administration/src/view/sw-order-detail-inpost-detail-card--point-details/sw-order-detail-inpost-detail-card--create-package.html.twig
+++ b/src/Resources/app/administration/src/view/sw-order-detail-inpost-detail-card--point-details/sw-order-detail-inpost-detail-card--create-package.html.twig
@@ -1,6 +1,6 @@
 <div class="inpost-point-detail">
     <div class="image" ref="pointImageDiv">
-        <img src="" alt="paczkomat" ref="pointImage" />
+        <img src="" alt="{{ $tc('cardDetails.pointName') }}" ref="pointImage" />
     </div>
 
     <div class="information">
