Add translation for change point

--- a/src/Resources/views/storefront/component/shipping/shipping-method.html.twig
+++ b/src/Resources/views/storefront/component/shipping/shipping-method.html.twig
@@ -24,7 +24,7 @@
                 </div>
             </div>
 
-            <button class="btn btn-primary" data-inpost-plugin-changePoint>Change point</button>
+            <button class="btn btn-primary" data-inpost-plugin-changePoint>{{ 'pointName.changePoint'|trans }}</button>
         </div>
         <div id="easypack-map" data-inpost-plugin-map></div>
 
