Add get InPost api data by sales channel, add components for settings api, add button to check InPost api data are valid

--- a/src/Resources/views/storefront/component/shipping/shipping-method.html.twig
+++ b/src/Resources/views/storefront/component/shipping/shipping-method.html.twig
@@ -28,7 +28,7 @@
         </div>
         <div id="easypack-map" data-inpost-plugin-map></div>
 
-        <p class="error-message hide" class="point-name-not-selected-message">{{ 'pointName.notFound'|trans }}</p>
+        <p class="error-message hide point-name-not-selected-message">{{ 'pointName.notFound'|trans }}</p>
 
         <input type="hidden" id="inpost-parcel-locker" name="customParcelLockerField" form="confirmOrderForm">
     {% endif %}
