Add geowidget V5, change ecs to bitbag repo

--- a/src/Resources/app/storefront/src/scss/base.scss
+++ b/src/Resources/app/storefront/src/scss/base.scss
@@ -29,7 +29,7 @@
 
 }
 
-.inpostPoint.hide, .easypack-widget.hide{
+.hide {
     display: none;
 }
 
@@ -39,4 +39,8 @@
     &.hide {
         display: none;
     }
+}
+
+.data-inpost-plugin-map-container {
+    height: 700px;
 }
