--- a/src/Resources/views/storefront/page/checkout/finish/index.html.twig
+++ b/src/Resources/views/storefront/page/checkout/finish/index.html.twig
@@ -2,7 +2,7 @@
 
 {% block page_checkout_finish_details %}
     {{ parent() }}
-    {% if context.shippingMethod.name == "InPost" %}
+    {% if context.shippingMethod.customFields.technical_name === constant('BitBag\\ShopwareInPostPlugin\\Factory\\ShippingMethodPayloadFactoryInterface::SHIPPING_KEY') %}
         <div class="card mb-3" style="max-width: 540px;">
             <div class="row g-0" style="margin-bottom: 8%;">
                 <div class="col-md-8" style="max-width: 25vh">
