Fix bulk edit and change color in InPost courier order

--- a/src/Resources/app/administration/src/component/bitbag-order-selected-items/bitbag-order-selected-items.scss
+++ b/src/Resources/app/administration/src/component/bitbag-order-selected-items/bitbag-order-selected-items.scss
@@ -1,9 +1,5 @@
-.sw-data-grid .sw-data-grid__cell--header {
-    z-index: 7;
-}
-
 .sw-data-grid .sw-data-grid__body .sw-data-grid__row.is--selected.background-red .sw-data-grid__cell {
-    background-color: red;
+    background-color: #FF7377;
 }
 
 .sw-data-grid .sw-data-grid__body .sw-data-grid__row.is--selected.background-green .sw-data-grid__cell {
