--- a/src/Resources/app/administration/src/component/bitbag-order-selected-items/bitbag-order-selected-items.html.twig
+++ b/src/Resources/app/administration/src/component/bitbag-order-selected-items/bitbag-order-selected-items.html.twig
@@ -8,12 +8,13 @@
 
                 <small><strong>{{ $tc('popup.redBackgroundTitle') }}</strong> - {{ $tc('popup.redBackgroundDescription') }}</small>
                 <small><strong>{{ $tc('popup.greenBackgroundTitle') }}</strong> - {{ $tc('popup.greenBackgroundDescription') }}</small>
+                <small><strong>{{ $tc('popup.yellowBackgroundTitle') }}</strong> - {{ $tc('popup.yellowBackgroundDescription') }}</small>
             </div>
             <button :title="$tc('popup.cancelButton')" :aria-label="$tc('popup.cancelButton')" class="sw-modal__close" @click="onCloseModal">
                 <span class="sw-icon icon--small-default-x-line-medium sw-icon--fill sw-icon--small">
                     <svg mlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 16 16">
                         <path fill="#758CA3" fill-rule="evenodd"
-                            d="M8,6.58578644 L11.2928932,3.29289322 C11.6834175,2.90236893 12.3165825,2.90236893 12.7071068,3.29289322 C13.0976311,3.68341751 13.0976311,4.31658249 12.7071068,4.70710678 L9.41421356,8 L12.7071068,11.2928932 C13.0976311,11.6834175 13.0976311,12.3165825 12.7071068,12.7071068 C12.3165825,13.0976311 11.6834175,13.0976311 11.2928932,12.7071068 L8,9.41421356 L4.70710678,12.7071068 C4.31658249,13.0976311 3.68341751,13.0976311 3.29289322,12.7071068 C2.90236893,12.3165825 2.90236893,11.6834175 3.29289322,11.2928932 L6.58578644,8 L3.29289322,4.70710678 C2.90236893,4.31658249 2.90236893,3.68341751 3.29289322,3.29289322 C3.68341751,2.90236893 4.31658249,2.90236893 4.70710678,3.29289322 L8,6.58578644 Z"></path>
+                              d="M8,6.58578644 L11.2928932,3.29289322 C11.6834175,2.90236893 12.3165825,2.90236893 12.7071068,3.29289322 C13.0976311,3.68341751 13.0976311,4.31658249 12.7071068,4.70710678 L9.41421356,8 L12.7071068,11.2928932 C13.0976311,11.6834175 13.0976311,12.3165825 12.7071068,12.7071068 C12.3165825,13.0976311 11.6834175,13.0976311 11.2928932,12.7071068 L8,9.41421356 L4.70710678,12.7071068 C4.31658249,13.0976311 3.68341751,13.0976311 3.29289322,12.7071068 C2.90236893,12.3165825 2.90236893,11.6834175 3.29289322,11.2928932 L6.58578644,8 L3.29289322,4.70710678 C2.90236893,4.31658249 2.90236893,3.68341751 3.29289322,3.29289322 C3.68341751,2.90236893 4.31658249,2.90236893 4.70710678,3.29289322 L8,6.58578644 Z"></path>
                     </svg>
                 </span>
             </button>
@@ -86,8 +87,13 @@
                             </tr>
                             </thead>
                             <tbody class="sw-data-grid__body">
-                                <tr :class="['sw-data-grid__row is--selected sw-data-grid__row--0', (item.deliveries[0].shippingMethod.customFields && item.deliveries[0].shippingMethod.customFields.technical_name === 'InPost' ? '' : ' background-red'), (item.extensions.inPost && item.extensions.inPost.packageId !== null ? '' : ' background-red'), (item.deliveries[0].trackingCodes.length > 0 ? ' background-green' : '')]" v-for="item in selectedOrders">
-
+                            <tr :class="['sw-data-grid__row is--selected sw-data-grid__row--0',
+                                (item.deliveries[0].shippingMethod.customFields && item.deliveries[0].shippingMethod.customFields.technical_name === 'InPost' ? '' : ' background-red'),
+                                (item.extensions.inPost && item.extensions.inPost.packageId ? '' : ' background-red'),
+                                (item.extensions.inPost && item.extensions.inPost.sendingMethod ? '' : ' background-red'),
+                                (item.extensions.inPost && (item.extensions.inPost.sendingMethod === 'parcel_locker' || item.extensions.inPost.sendingMethod !== 'dispatch_order')  ? ' background-yellow' : ''),
+                                (item.deliveries[0].trackingCodes.length > 0 ? ' background-green' : '')]"
+                                v-for="item in selectedOrders">
                                 <td class="sw-data-grid__cell sw-data-grid__cell--orderNumber sw-data-grid__cell--align-left">
                                     <div class="sw-data-grid__cell-content">
                                         <a :href="'#/sw/order/detail/' + item.id" target="_blank" rel="noreferrer noopener">
