--- a/src/Resources/app/administration/src/component/bitbag-order-selected-items/bitbag-order-selected-items.scss
+++ b/src/Resources/app/administration/src/component/bitbag-order-selected-items/bitbag-order-selected-items.scss
@@ -6,6 +6,10 @@
     background-color: lightgreen;
 }
 
+.sw-data-grid .sw-data-grid__body .sw-data-grid__row.is--selected.background-yellow .sw-data-grid__cell {
+    background-color: #FFF9A6;
+}
+
 .sw-modal__titles {
     text-align: left;
 
