Plugin update for shopware 6.5

--- a/src/Resources/views/storefront/component/shipping/shipping-method.html.twig
+++ b/src/Resources/views/storefront/component/shipping/shipping-method.html.twig
@@ -45,5 +45,82 @@
         <p class="error-message hide point-name-not-selected-message">{{ 'pointName.notFound'|trans }}</p>
 
         <input type="hidden" id="inpost-parcel-locker" name="customParcelLockerField" form="confirmOrderForm">
+        <script>
+            function InPostPlugin() {
+                this.init = function () {
+                    window.afterPointSelected = this.updateSelected;
+
+                    const changePointButton = document.querySelector('[data-inpost-plugin-changePoint]');
+                    changePointButton.addEventListener('click', (e) => {
+                        e.preventDefault();
+                        this.changePoint();
+                    });
+
+                    const confirmFormSubmitButtonEl = document.getElementById('confirmFormSubmit');
+                    if (confirmFormSubmitButtonEl) {
+                        confirmFormSubmitButtonEl.addEventListener('click', (e) => {
+                            const pointNameNotSelectedMessageEl = document.querySelector('.point-name-not-selected-message');
+
+                            const inPostParcelLockerEl = document.getElementById('inpost-parcel-locker');
+                            if (!inPostParcelLockerEl || (inPostParcelLockerEl && !inPostParcelLockerEl.value)) {
+                                e.preventDefault();
+
+                                document.querySelector('.shipping-methods').scrollIntoView({
+                                    behavior: 'smooth'
+                                });
+
+                                if (pointNameNotSelectedMessageEl) {
+                                    pointNameNotSelectedMessageEl.classList.remove('hide');
+                                }
+                            } else {
+                                if (pointNameNotSelectedMessageEl) {
+                                    pointNameNotSelectedMessageEl.classList.add('hide');
+                                }
+                            }
+                        });
+                    }
+                };
+
+                this.updateSelected = function (point) {
+                    const inPostParcelLockerEl = document.querySelector('#inpost-parcel-locker');
+                    inPostParcelLockerEl.value = point.name;
+
+                    const selectedPoint = document.querySelector('[data-inpost-plugin-selectedPoint]');
+                    selectedPoint.classList.remove('hide');
+
+                    const inPostGeoMap = document.querySelector('[data-inpost-plugin-map]');
+                    inPostGeoMap.classList.add('hide');
+
+                    const pointThumbnail = document.querySelector('[data-inpost-plugin-thumbnail]');
+                    pointThumbnail.src = point.image_url;
+
+                    const pointName = document.querySelector('[data-inpost-plugin-name]');
+                    pointName.innerText = point.name;
+
+                    const pointAddressOne = document.querySelector('[data-inpost-plugin-addressOne]');
+                    pointAddressOne.innerText = point.address.line1;
+
+                    const pointAddressTwo = document.querySelector('[data-inpost-plugin-addressTwo]');
+                    pointAddressTwo.innerText = point.address.line2;
+
+                    const pointNameNotSelectedMessageEl = document.querySelector('.point-name-not-selected-message');
+                    if (pointNameNotSelectedMessageEl) {
+                        pointNameNotSelectedMessageEl.classList.add('hide');
+                    }
+                };
+
+                this.changePoint = function () {
+                    const selectedPoint = document.querySelector('[data-inpost-plugin-selectedPoint]');
+                    selectedPoint.classList.add('hide');
+
+                    const inPostGeoMap = document.querySelector('[data-inpost-plugin-map]');
+                    inPostGeoMap.classList.remove('hide');
+                };
+            }
+
+            const inPostPlugin = new InPostPlugin();
+            inPostPlugin.init();
+
+        </script>
     {% endif %}
 {% endblock %}
